Actions
Bug #4112
closedsd should apply sd_io_time tunable to non-optical devices
Start date:
2013-09-04
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Currently, sd will do a few initial requests to probe out its LU while using SD_IO_TIME (currently 60s). Once that's done, it will set the timeout for the LU to sd_io_time, which can be tuned using /etc/system. It would be much more useful if this tunable were set only for non-optical devices, to avoid timeouts on those. This is certainly too conservative but allows one to safely set the tunable to a far more reasonable value such as 10s or even 5s without worrying about breaking the oddball slow device.
Updated by Robert Mustacchi almost 9 years ago
Resolved in f72291e45a696160432c1cfa04f82dcb09470af3.
Updated by Robert Mustacchi almost 9 years ago
- Status changed from In Progress to Resolved
- % Done changed from 0 to 100
Actions