4112 sd should apply sd_io_time tunable to non-optical devices 4113 sd.conf tunable enhancements Reviewed by: Garrett D'Amore <garrett@dey-sys.com> Approved by: Albert Lee <trisk@nexenta.com>